--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
-        "express": "^4.15.4"
+        "express": "^4.15.4",
+        "express-ws": "^3.0.0"
     }
 }
