--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
         "express": "^4.15.4",
-        "express-ws": "^3.0.0"
+        "express-ws": "^3.0.0",
+        "pug": "^2.0.0-rc.3",
+        "socket.io": "^2.0.3"
+    },
+    "devDependencies": {
+        "eslint": "^4.4.1",
+        "eslint-config-airbnb-base": "^11.3.1",
+        "eslint-plugin-import": "^2.7.0"
     }
 }
