Add auto-refresh via Websockets (WIP)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-efa",
     "version": "1.0.0",
     "description": "A node.js wrapper for the EFA (Elektronische Fahrplan-Auskunft) API.",
-    "main": "index.js",
+    "main": "public/index.js",
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
         "express": "^4.15.4",
