--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "eslint-plugin-import": "^2.7.0",
         "gulp-sass": "^3.1.0",
         "istanbul": "^0.4.5",
-        "mocha": "^3.5.0"
+        "mocha": "^3.5.0",
+        "sinon": "^3.2.1"
     },
     "scripts": {
         "start": "node index.js",
