--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "express": "^4.15.4",
         "express-ws": "^3.0.0",
         "pug": "^2.0.0-rc.3",
+        "sanitize-html": "^1.14.1",
         "socket.io": "^2.0.3"
     },
     "devDependencies": {
