--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "node-efa",
+    "name": "efa-slurper",
     "version": "1.0.0",
-    "description": "A node.js wrapper for the EFA (Elektronische Fahrplan-Auskunft) API.",
+    "description": "A web scraper for EFA (Elektronische Fahrplanauskunft).",
     "main": "index.js",
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
