--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "efa-slurper",
     "version": "1.0.0",
     "description": "A web scraper for EFA (Elektronische Fahrplanauskunft).",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:Tardog/efa-slurper.git"
+    },
+    "license": "GPL-3.0",
     "main": "index.js",
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
@@ -12,9 +17,9 @@
         "socket.io": "^2.0.3"
     },
     "devDependencies": {
-        "chai": "^4.1.1",
-        "eslint": "^4.4.1",
-        "eslint-config-airbnb-base": "^11.3.1",
+        "chai": "^4.1.2",
+        "eslint": "^4.6.1",
+        "eslint-config-airbnb-base": "^11.3.2",
         "eslint-plugin-import": "^2.7.0",
         "gulp-sass": "^3.1.0",
         "istanbul": "^0.4.5",
